--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,15 @@ after_success:
   - docker push xavophonic/multi-nginx
   - docker push xavophonic/multi-server
   - docker push xavophonic/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-3"
+  app: "multi-docker"
+  env: "MultiDocker-env"
+  bucket_name: "elasticbeanstalk-eu-west-3-992382828808"
+  bucket_path: "docker-multi"
+  on: 
+    branch: master
+  access_key_id: "$AWS_ACCESS_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
