fix docker compose and docker run version

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
     services:
       client:
-        image: "rallycoding/multi-client"
+        image: "xavophonic/multi-client"
         mem_limit: 128m
         hostname: client
       server:
-        image: "rallycoding/multi-server"
+        image: "xavophonic/multi-server"
         mem_limit: 128m
         hostname: api
         environment:
@@ -16,14 +16,14 @@
           - PGPASSWORD=$PGPASSWORD
           - PGPORT=$PGPORT
       worker:
-        image: "rallycoding/multi-worker"
+        image: "xavophonic/multi-worker"
         mem_limit: 128m
         hostname: worker
         environment:
           - REDIS_HOST=$REDIS_HOST
           - REDIS_PORT=$REDIS_PORT
       nginx:
-        image: "rallycoding/multi-nginx"
+        image: "xavophonic/multi-nginx"
         mem_limit: 128m
         hostname: nginx
         ports:
